--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "knex": "^3.1.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
