--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/heitorlbelem/rocket-movies-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "knex": "^3.1.0",
